--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,10 +33,11 @@ section#login{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
-transition: width .3s, height .3s;
+
+    transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
 
@@ -46,6 +47,7 @@ section#login > div#imagem{
     background-size: cover;
     background-position: left bottom;
     height: 200px;
+
 }
 
 section#login > div#formulario{
@@ -60,6 +62,19 @@ div#formulario{
 
 div#formulario > p {
  font-size: 0.8em;
+}
+
+form > div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label{
+    display: none;
 }
 
 form > input [type=submit]{
@@ -91,6 +106,7 @@ form > a.botao {
     border: 1px solid #49a09d;
     border-radius: 7px;
     text-decoration: none;
+    cursor: pointer;
 }
 
  form > a.botao:hover{
